<resources>
    <string name="app_name">DeMap</string>


    <string name="create_folder">새 폴더 추가</string>
    <string name="folder_name">폴더 이름</string>
    <string name="folder_search">폴더 검색</string>
    <string name="folder_search_hint">폴더명 입력</string>
    <string name="folder_subscribe">구독하기</string>
    <string name="folder_unsubscribe">구독취소</string>

    <string name="my_folder">내 폴더</string>
    <string name="subs_folder">구독 폴더</string>

    <!--login-->
    <string name="signin_google">구글계정 로그인  →</string>
    <string name="signin_email">로그인</string>
    <string name="go_signup_email">회원가입</string>
    <string name="signup_email">가입하기</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="nickname_text">닉네임</string>
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>



    <!-- Naver -->
    <string name="name_marker">Marker</string>
    <string name="description_marker">마커</string>
    <string name="marker_caption_1">☀캡션이 있는 마커🎉</string>
    <string name="marker_caption_2">서브 캡션이 있는 마커</string>
    <string name="marker_sub_caption_2">🇰🇷서브 캡션👩🏿‍🍳</string>

    <string name="name_info_window">Info Window</string>
    <string name="description_info_window">정보 창</string>
    <string name="format_info_window_on_marker">마커: %s</string>
    <string name="format_info_window_on_map">좌표: (%1$.5f, %2$.5f)</string>

    <string name="name_custom_info_window">Custom Info Window</string>
    <string name="description_custom_info_window">커스텀 어댑터를 사용하는 정보 창</string>
    <string name="content_description_icon">아이콘</string>
    <string name="format_coord">(%1$.5f, %2$.5f)</string>
</resources>
