<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            style="@style/Regular_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/nickname_text"
            app:layout_constraintEnd_toStartOf="@id/et_nickname"
            app:layout_constraintTop_toTopOf="@id/et_nickname" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn_round"
            android:gravity="center"
            android:text="@string/confirm_text"
            app:layout_constraintStart_toStartOf="@id/et_nickname"
            app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn_round"
            android:gravity="center"
            android:text="@string/cancel_text"
            app:layout_constraintRight_toRightOf="@id/et_nickname"
            app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>