<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="kr.ac.hansung.demap.ui.login.LoginActivity" />

        <variable
            name="presenter"
            type="kr.ac.hansung.demap.ui.login.LoginPresenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/ll_login"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:text="email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/background_et_round"
                android:hint="@string/hint_email"
                android:paddingStart="2dp"
                android:text="@={presenter._email}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:text="password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_et_round"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="2dp"
                android:text="@={presenter._password}" />

            <Button
                android:id="@+id/btn_email_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_btn_round"
                android:onClick="@{() -> activity.emailLogin()}"
                android:text="@string/signin_email" />

            <Button
                android:id="@+id/btn_email_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_btn_round"
                android:onClick="@{() -> activity.goToSignup()}"
                android:text="@string/go_signup_email" />


            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/background_btn_google"
                android:onClick="@{()-> activity.googleLogin()}"
                android:text="@string/signin_google"
                android:textColor="@color/colorWhite" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>